@@ -26,6 +26,7 @@ PHP                                                                        NEWS
     from an array. (Bob)
   . Fixed bug #70987 (static::class within Closure::call() causes segfault).
     (Andrea)
+  . Fixed bug #71013 (Incorrect exception handler with yield from). (Bob)
 
 - CLI server:
   . Fixed bug #71005 (Segfault in php_cli_server_dispatch_router()). (Adam)
